# bcp-challenge

./: .env.template  .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/database/: customer_behavior.csv
backend/src/backend/: agents.py  config.py  database.py  history.py  main.py  rag.py
backend/src/backend/agents/: agents.py  crew.py
backend/src/backend/tools/: context_tool.py  policy_rag_tool.py
backend/vector_store/: fraud_policies.json
frontend/: pyproject.toml
frontend/src/frontend/: main.py  transactions.csv
