[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "pydantic>=2.11.10",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
