[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=0.193.2",
    "fastapi>=0.128.2",
    "jq>=1.11.0",
    "langchain>=0.3.27",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.23",
    "pydantic>=2.11.10",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
